@@ -72,9 +72,7 @@ extern char *manpathlist[];
 extern char *optarg;
 extern int optind, opterr, optopt;
 
-#ifndef debug
-int debug;
-#endif
+int debug = 0;
 char *program_name;
 char *database;
 MYDBM_FILE dbf;
@@ -536,9 +534,7 @@ int main (int argc, char *argv[])
 		switch (c) {
 
 			case 'd':
-#ifndef debug
 				debug = 1;
-#endif
 				break;
 			case 'L':
 				llocale = optarg;
